# plugin-tests

./: .pre-commit-config.yaml  LICENSE  README.md  example_func.py  setup.cfg  setup.py  tox.ini
src/plugin_tests/: __init__.py  _reader.py  _widget.py  napari.yaml
src/plugin_tests/_tests/: test_reader.py  test_widget.py
