[metadata]
name = plugin-tests

author = Draga Doncila Pop
author_email = ddoncila@gmail.com
url = https://github.com/DragaDoncila/plugin-tests
license = BSD-3-Clause
description = A small plugin to demonstrate testing napari plugins
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/DragaDoncila/plugin-tests/issues
    Documentation = https://github.com/DragaDoncila/plugin-tests#README.md
    Source Code = https://github.com/DragaDoncila/plugin-tests
    User Support = https://github.com/DragaDoncila/plugin-tests/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
plugin-tests = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    plugin-tests = plugin_tests:napari.yaml
