[metadata]
name = plugin_tests
description = A small plugin to demonstrate testing napari plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DragaDoncila/plugin-tests
author = Draga Doncila Pop
author_email = ddoncila@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
include_package_data = True
project_urls =
    Bug Tracker = https://github.com/DragaDoncila/plugin-tests/issues
    Documentation = https://github.com/DragaDoncila/plugin-tests#README.md
    Source Code = https://github.com/DragaDoncila/plugin-tests
    User Support = https://github.com/DragaDoncila/plugin-tests/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    scikit-image
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    plugin-tests = plugin_tests:napari.yaml

[options.package_data]
plugin_tests =
    napari.yaml
